--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
     />
-    <title>Vercel HTML Starter</title>
+    <title>Kenya Sustainable Community Development Hub</title>
     <meta
       name="description"
       content="High-performance HTML based website template."
