--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/_vercel/insights/script.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
+
     <title>Kenya Sustainable Community Development Hub</title>
     <meta
       name="description"
@@ -17,8 +14,6 @@
   <body>
     <h1>Kenya SCD Hub</h1>
     <p>Solutions to the Climate Crisis</p>
-
-<!-- quick fix to load assets from github -->
 
 <style>
 
@@ -200,7 +195,7 @@ dialog a {
     	<div class="category_container">
 
     		<div class="content">
-    			<img src="assets/Photographer.jpg" class="profession_image" alt="Profession" />
+    			<img src="https://exotopia.org/kscdhub/birds-4644652_1280.jpg" class="profession_image" alt="Profession" />
     			<img src="assets/Prince Akashi.jpg" class="profile_image" alt="Profile" />
     			<div class="profile_detail">
     				<span>Renewable Energy Transition</span>
@@ -213,7 +208,7 @@ dialog a {
     			</div>
     		</div>
     		<div class="content">
-    			<img src="assets/Fashion Designer.jpg" class="profession_image" alt="Profession" />
+    			<img src="" class="profession_image" alt="Profession" />
     			<img src="assets/Rafaella Mendes.jpg" class="profile_image" alt="Profile" />
     			<div class="profile_detail">
     				<span>Afforestation and Reforestation</span>
@@ -232,7 +227,7 @@ dialog a {
     <section class="container">
     	<div class="category_container">
     		<div class="content">
-    			<img src="assets/UI UX Designer.jpg" class="professio_image" alt="Profession" />
+    			<img src="https://exotopia.org/kscdhub/safari-111698_1280.jpg" class="professio_image" alt="Profession" />
     			<img src="assets/John Doe.jpg" class="profile_image" alt="Profile" />
     			<div class="profile_detail">
     				<span>Sustainable Agriculture</span>
